--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </p>
 <div class="col-md-4 col-sm-12 col-xs-12">
   <label>Webcam View - </label><div id="camera"></div><br><br>
-  <button onclick="takeSnapshot()" class="btn btn-warning">Capture Image</button>
+  <button onclick="take_snapshot()" class="btn btn-warning">Capture Image</button>
 </div>
 <div class="col-md-4 col-sm-12 col-xs-12">
   <label>Prediction1 - </label>
